<resources>
    <string name="app_name">MovieGuide</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="settings">Настройки</string>
    <string name="search">Поиск</string>
    <string name="search_hint">Поиск по названию</string>
    <string name="no_movies">Фильмы не найдены</string>
    <string name="see_trailer">Посмотреть трейлер</string>
    <string name="cast">Актёры</string>
    <string name="poster">Постер</string>
    <string name="add_to_favorites">Добавить в избранное</string>
    <string name="remove_from_favorites">Удалить из избранного</string>
    <string name="rating">Рейтинг</string>
    <string name="overview">Описание</string>
    <string name="year_label">Год</string>
    <string name="settings_saved">Настройки сохранены</string>
    <string name="toast_added_favorite">Добавлено в избранное</string>
    <string name="toast_removed_favorite">Удалено из избранного</string>
    <string name="toast_movie_not_found">Фильм не найден</string>
    <string name="toast_no_movie_id">Не указан ID фильма</string>
    <string name="toast_trailer_open_error">Не удалось открыть трейлер</string>
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="back">Назад</string>
    <string name="no_favorites">Избранных фильмов нет</string>
    <string name="see_popular">Посмотреть популярное</string>
    <string name="language_label">Язык</string>
    <string name="theme_label">Тема</string>
    <string name="save_settings">Сохранить настройки</string>
    <string name="movie_title_placeholder">Название фильма</string>
    <string name="trailer_search_term">Трейлер</string>
    <string name="actor_photo">Фото актёра</string>
</resources>