<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/appTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/genre_text" />
    </LinearLayout>

    <EditText
        android:id="@+id/searchEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/search_hint"
        android:layout_marginTop="8dp"
        android:inputType="text"
        android:drawableStart="@drawable/ic_search"
        android:padding="10dp"
        android:background="@drawable/search_bg" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/genresRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="12dp"
        android:overScrollMode="never"
        android:orientation="horizontal" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/moviesRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="12dp" />

    <TextView
        android:id="@+id/noMoviesTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_movies"
        android:textSize="18sp"
        android:textColor="@color/gray"
        android:gravity="center"
        android:visibility="gone"
        android:layout_marginTop="8dp" />

</LinearLayout>